--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,30 +1,21 @@
-{% extends "home/navbar.html" %}
-{% load crispy_forms_tags %}
+{% extends "home/base.html" %}
+
 {% block content %}
+<div class="container col-md-8">
     <div class="content-section">
-        <div class="media">
-            <img  class="rounded-circle account-img" src="{{ user.profile.image.url }}" >
-            <div class="media-body">
-                <h2 class="account-heading">{{user.username}}</h2>
-                <p class="text-secondary">{{user.email}}</p>
-            </div>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+              <h1>{{ user.username }}</h1>
+              {% if user.is_doctor %}
+                <p>Specilization: {{ user.doctor.specialization }}</p>
+              {% endif %}
+              {% if user.is_patient and user.patient.get_bmi %}
+                <p>BMI: {{ user.patient.get_bmi }}</p>
+                <p>User ID: {{ user.id }}</p>
+              {% endif %}
+            </small>
         </div>
-        
-
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Profile</legend>
-                {{u_form|crispy}}
-                {{p_form|crispy}}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">
-                    Update
-                </button>
-            </div>
-        </form>
-
     </div>
+
+</div>
 {% endblock content %}
- 
