--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,24 +1,25 @@
-{% extends "home/navbar.html" %}
+{% extends "home/base.html" %}
 {% load crispy_forms_tags %}
+
 {% block content %}
+<div class="container col-md-8">
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
-                {{form|crispy}}
+                <legend class="border-bottom mb-4">Login</legend>
+                {{ form | crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">
-                    Login
-                </button>
+                <button class="btn btn-outline-info" id="login" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need an Account? <a class href="{% url 'register' %}">Sign Up Now</a>
+                Need an account? <a class="ml-2" href="{% url 'register' %}">Register</a>
             </small>
         </div>
     </div>
- 
+
+</div>
 {% endblock content %}
