--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,13 +1,14 @@
-{% extends "home/navbar.html" %}
+{% extends "home/base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>You have been Logged out</h1>
-    <div class="content-section">
-        <div class="border-top pt-3">
-            <small class="text-muted">
-              <a class href="{% url 'login' %}">Log In Again</a>
-            </small>
-        </div>
+<div class="container col-md-8">
+  <div class="content-section">
+    <h2 class="border-bottom mb-4">You have succefully logged out</h2>
+          <small class="text-muted">
+              Login with a different account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+          </small>
     </div>
- 
+</div>
+
 {% endblock content %}
