--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,24 +1,28 @@
-{% extends "home/navbar.html" %}
+{% extends "home/base.html" %}
 {% load crispy_forms_tags %}
+
 {% block content %}
+<div class="container col-md-8">
+
+
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{form|crispy}}
+                {{ u_form | crispy }}
+
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">
-                    Sign Up
-                </button>
+                <button class="btn btn-outline-info" id="signup" type="submit">Sign Up</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have an Account? <a class href="{% url 'login' %}">Sign In</a>
+                Already Have An Account? <a class="ml-2" href="#">Sign In</a>
             </small>
         </div>
     </div>
- 
+
+</div>
 {% endblock content %}
