--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -18,7 +18,7 @@
       <br>
       <br>
       <br>
-      <strong>Developed by:</strong><br>
+      {% comment %} <strong>Developed by:</strong><br>
       <em>
         S. M. Al Faruqui [ID: 172 1395 042] <br>
         Nirob Hasan [ID: 172 1455 642] <br>
@@ -27,7 +27,7 @@
 
 
       </em>
-      <small>[  For CSE327-Spring-2019 (Sec-4)  ]</small>
+      <small>[  For CSE327-Spring-2019 (Sec-4)  ]</small> {% endcomment %}
     </div>
   </article>
 </div>
