--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -9,7 +9,7 @@
         <h1>About</h1>
       </div>
       <br>
-      <em><h5>Welcome to Healix</h5>
+      <em><h5>Welcome to healthcare</h5>
         <h6>Online solution towards better healthcare and lifestyle </h6>
         <br>
 
@@ -18,16 +18,7 @@
       <br>
       <br>
       <br>
-      {% comment %} <strong>Developed by:</strong><br>
-      <em>
-        S. M. Al Faruqui [ID: 172 1395 042] <br>
-        Nirob Hasan [ID: 172 1455 642] <br>
-        Monsur Hillas [ID: 172 1911 642] <br>
-        Md. Tashfiqul Islam [ID: 161 1593 042] <br>
-
-
-      </em>
-      <small>[  For CSE327-Spring-2019 (Sec-4)  ]</small> {% endcomment %}
+      
     </div>
   </article>
 </div>
