--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link rel="shortcut icon" href="{% static 'home/Baymax.png' %}" />
+  <link rel="shortcut icon" href="{% static 'home/hospital.png' %}" />
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
 
